cmake_minimum_required(VERSION 2.8.12)

ADD_CUSTOM_TARGET(copy_sample_key)

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    ADD_CUSTOM_COMMAND(TARGET copy_sample_key
                    PRE_BUILD
                    COMMAND cp -r -f ${CMAKE_CURRENT_LIST_DIR}/sample_key/* ${EXECUTABLE_OUTPUT_PATH})
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
    STRING(REPLACE "/" "\\" SRC ${CMAKE_CURRENT_LIST_DIR}/sample_key/*)
    STRING(REPLACE "/" "\\" DEST ${EXECUTABLE_OUTPUT_PATH})

    ADD_CUSTOM_COMMAND(TARGET copy_sample_key
                       PRE_BUILD
                       COMMAND xcopy /y /s ${SRC} ${DEST})
endif()

if(NOT TOOLCHAIN STREQUAL "LIBFUZZER")
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_spdm_requester)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_spdm_responder)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_crypt)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_spdm_common)
    if(CMAKE_SYSTEM_NAME MATCHES "Windows")
        if(ARCH STREQUAL "x64")
            ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_size/test_size_of_spdm_requester)
            ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_size/test_size_of_spdm_responder)
        endif()
    endif()
endif()

ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/spdm_transport_test_lib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_get_version)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_version)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_get_capabilities)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_capabilities)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_negotiate_algorithms)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_algorithms)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_get_digests)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_digests)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_get_certificate)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_certificate)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_get_measurements)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_measurements)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_key_exchange)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_key_exchange)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_finish)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_finish_rsp)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_psk_exchange)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_psk_exchange_rsp)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_heartbeat)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_heartbeat_ack)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_key_update)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_key_update)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_end_session)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_end_session)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_psk_finish_rsp)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_psk_finish)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_challenge)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_challenge_auth)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_encap_challenge_auth)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_encap_challenge)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_encap_certificate)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_encap_get_certificate)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_encap_digests)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_encap_get_digests)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_encap_key_update)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_encap_key_update)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_requester/test_spdm_requester_encap_request)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_encap_response)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_responder/test_spdm_responder_if_ready)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_transport/test_spdm_transport_mctp_encode_message)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_transport/test_spdm_transport_mctp_decode_message)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_transport/test_spdm_transport_pci_doe_encode_message)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_transport/test_spdm_transport_pci_doe_decode_message)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_secured_message/test_spdm_decode_secured_message)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/fuzzing/test_secured_message/test_spdm_encode_secured_message)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_size/intrinsiclib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_size/malloclib_null)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/test_size/rnglib_null)

