add_subdirectory(spdm_transport_test_lib)
add_subdirectory(cmockalib)

# TODO: disable for LIBFUZZER toolchain
add_subdirectory(test_spdm_requester)
add_subdirectory(test_spdm_responder)
add_subdirectory(test_crypt)
add_subdirectory(test_spdm_crypt)
add_subdirectory(test_spdm_fips)
add_subdirectory(test_spdm_secured_message)
add_subdirectory(test_spdm_sample)

# TODO: disable for ARM_DS2022 and RISCV_XPACK
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_version)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_version)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_capabilities)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_capabilities)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_negotiate_algorithms)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_algorithms)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_digests)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_digests)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_certificate)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_certificate)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_measurements)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_measurements)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_key_exchange)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_key_exchange)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_finish)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_finish_rsp)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_psk_exchange)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_psk_exchange_rsp)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_heartbeat)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_heartbeat_ack)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_key_update)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_key_update)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_end_session)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_end_session)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_psk_finish_rsp)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_psk_finish)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_challenge)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_challenge_auth)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_encap_challenge_auth)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_encap_challenge)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_encap_certificate)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_encap_get_certificate)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_encap_digests)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_encap_get_digests)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_encap_key_update)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_encap_key_update)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_encap_request)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_encap_response)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_if_ready)
add_subdirectory(fuzzing/test_transport/test_spdm_transport_mctp_encode_message)
add_subdirectory(fuzzing/test_transport/test_spdm_transport_mctp_decode_message)
add_subdirectory(fuzzing/test_transport/test_spdm_transport_pci_doe_encode_message)
add_subdirectory(fuzzing/test_transport/test_spdm_transport_pci_doe_decode_message)
add_subdirectory(fuzzing/test_transport/test_spdm_transport_tcp_encode_message)
add_subdirectory(fuzzing/test_transport/test_spdm_transport_tcp_decode_message)
add_subdirectory(fuzzing/test_transport/test_spdm_transport_storage_encode_message)
add_subdirectory(fuzzing/test_transport/test_spdm_transport_storage_decode_message)
add_subdirectory(fuzzing/test_secured_message/test_spdm_decode_secured_message)
add_subdirectory(fuzzing/test_secured_message/test_spdm_encode_secured_message)
add_subdirectory(fuzzing/test_spdm_crypt/test_x509_certificate_check)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_set_certificate)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_set_certificate)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_csr)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_csr)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_chunk_get)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_chunk_get)
add_subdirectory(fuzzing/test_spdm_common/test_process_opaque_data)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_chunk_send_ack)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_chunk_send)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_supported_event_types)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_event_types)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_vendor_cmds)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_vendor_cmds)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_measurement_extension_log)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_measurement_extension_log)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_get_key_pair_info)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_key_pair_info)
add_subdirectory(fuzzing/test_requester/test_spdm_requester_set_key_pair_info)
add_subdirectory(fuzzing/test_responder/test_spdm_responder_set_key_pair_info_ack)

add_subdirectory(test_size/cryptstublib_dummy)
add_subdirectory(test_size/intrinsiclib)
add_subdirectory(test_size/malloclib_null)
add_subdirectory(test_size/malloclib_simple)
add_subdirectory(test_size/rnglib_null)
